# tcc-genai-codificacao

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: logic.py
docs/: structure.md
evaluate/: collect_metrics.py  rubric_clareza.md
experiments/: run_experiment.py
experiments/prompts/: system_puro.txt  system_rag.txt  task_template.txt
experiments/tasks/: task-001.yaml  task-002.yaml
interfacegen/: .env.example  .gitignore  README.md  docker-compose.yml
interfacegen/analysis/: README.md
interfacegen/audits/: Dockerfile  package.json  tsconfig.json
interfacegen/audits/src/: axe_runner.ts  cli.ts  lighthouse_runner.ts
interfacegen/backend/: Dockerfile  requirements.txt
interfacegen/backend/app/: config.py  main.py
interfacegen/backend/app/db/: models.py  session.py
interfacegen/backend/tests/: conftest.py  test_feedback.py  test_generate.py  test_health.py  test_participants.py
interfacegen/docs/: code_analysis.md  escopo.md  guia_execucao.md  repo_structure.md  requisitos.md  revisao.md
interfacegen/frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
interfacegen/frontend/app/: layout.tsx  page.tsx
interfacegen/frontend/components/: CodePreview.tsx  FeedbackForm.tsx  Loader.tsx  PromptInput.tsx  WizardForm.tsx
interfacegen/frontend/data/: wizard_schema.json
interfacegen/frontend/lib/: api.ts  participant.ts  storage.ts
rag/: build_index.py  retrieve.py
scripts/: lint_static.sh  run_tests.sh
tests/: test_logic.py
(+26 files in other folders)
